# marrikulus_c_test_opengl

./: CMakeLists.txt
Headers/: Camera.h  MarLib.h  Shader.h  game.h
Shaders/: ColorLight.fs  ColorObject.fs  ColorObject.vs  FragmentShader.frag  VertexShader.vert
Sources/: game.c  main.c
data/: monkey.fbx
